--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,500,700&display=swap" rel="stylesheet">
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
+   <link rel="icon" type="image/x-icon" href="../favicon.ico"/>
   <title>ChinaicPower</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
