--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
       top: 0%;
     }
   </style>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159394511-1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+</script>
 </head>
 <body>
-  <h1>Hello，</h1>
+  <h1>Hello</h1>
   <p style="font-weight:500; font-size:2.2em">
     Here you comes.
   </p>
